--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@ id="menu-button">
 
     </div>
 
-    <div class="introduction">
+    <!-- <div class="introduction">
         <div class="about">
             <h1>About Me</h1>
             <p>Your introduction content here…</p>
         </div>
-    </div>
+    </div> -->
 
     <section class="hero">
         <div class="hero-left">
@@ -51,7 +51,6 @@ id="menu-button">
         </div>
 
         <div class="hero-right">
-            <div class="shape"></div>
             <img id="profile-img" src="https://img.freepik.com/free-vector/all-right-emoji-illustration_23-2151298395.jpg?semt=ais_hybrid&w=740&q=80">
         </div>
     </section>
